--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-07 20:01:09
+lastsearch = 2024-08-07 20:40:35
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -283,8 +283,8 @@ url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-n
 
 [vietstock.vn]
 match = -218.8%%
-title = Phân tích kỹ thuật phiên chiều 07/08: Tâm lý thận trọng chi ...
-url = https://vietstock.vn/2024/08/phan-tich-ky-thuat-phien-chieu-0708-tam-ly-than-trong-chi-phoi-thi-truong-585-1217148.htm
+title = Vietstock Daily 08/08/2024: Triển vọng phục hồi chưa rõ ràng
+url = https://vietstock.vn/2024/08/vietstock-daily-08082024-trien-vong-phuc-hoi-chua-ro-rang-1636-1217366.htm
 
 [baohungyen.vn]
 match = -200.0%%
