--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-07 18:26:46
+lastsearch = 2024-08-07 20:36:48
 
 [everon.online]
 match = -55.6%%
@@ -37,9 +37,9 @@ title = Bộ chăn ga Everon ESB -22020
 url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = 0.0%%
-title = Bộ Everon Ept-21045
-url = https://everon.net.vn/everon/2125/bo-everon-ept-21045
+match = 10.5%%
+title = Bộ Everon Epm-21071
+url = https://everon.net.vn/everon/2130/bo-everon-epm-21071
 
 [sieuthidemhanquoc.com.vn]
 match = 22.2%%
