--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-08-07 18:59:31
+lastsearch = 2024-08-07 20:33:54
 
 [chieutruc.info]
 match = -60.0%%
@@ -13,8 +13,8 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
 match = -28.0%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [shopee.vn]
 match = -64.0%%
@@ -225,4 +225,9 @@ url = https://www.vaticannews.va/vi/loi-chua-hang-ngay/2024/09/18.html
 match = -32.0%%
 title = Trang Thông tin điện tử Tuyên giáo Cao Bằng
 url = http://tuyengiaocaobang.vn/
+
+[vpcp.chinhphu.vn]
+match = -80.0%%
+title = Nâng cao kiến thức an toàn thông tin trong hoạt động công vụ
+url = https://vpcp.chinhphu.vn/nang-cao-kien-thuc-an-toan-thong-tin-trong-hoat-dong-cong-vu-115240807201340885.htm
 
