--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-07 18:11:13
+lastsearch = 2024-08-07 20:35:42
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -42.9%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -57.1%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [www.taiwanembassy.org]
 match = -109.5%%
@@ -42,14 +42,14 @@ title = Hộ chiếu Đài Loan 2024 quyền lực như thế nào?
 url = https://taiwandiary.vn/2024/06/27/ho-chieu-dai-loan-2024-dung-thu-69/
 
 [www.roc-taiwan.org]
-match = -19.0%%
-title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
-url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
+match = -128.6%%
+title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
+url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [www.facebook.com]
-match = 0.0%%
-title = Raohe Ẩm Thực Đài
-url = https://www.facebook.com/RaoheAmThucDai/
+match = -9.5%%
+title = Xin chào, tôi ở Đài Loan | Kaohsiung
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -214,7 +214,7 @@ url = https://olm.vn/index.php/cau-hoi/mot-vuon-rau-hinh-chu-nhat-co-chieu-rong-
 [www.luavietours.com]
 match = -71.4%%
 title = ĐÀI LOAN 5N4Đ | ĐÀI BẮC – ĐÀI TRUNG – CAO HÙNG
-url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/
+url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai-loan-5n4d-dai-bac-dai-trung-cao-hung-2/?date=27-07
 
 [24hvisa.com]
 match = -81.0%%
