--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-07 18:26:23
+lastsearch = 2024-08-07 20:36:24
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -87,9 +87,9 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [www.facebook.com]
-match = -100.0%%
-title = Trấn Thành - Lịch chiếu MAI ở Đài Loan nha!!! Cả nhà cập...
-url = https://www.facebook.com/tran.thanh.ne/posts/lịch-chiếu-mai-ở-đài-loan-nha-cả-nhà-cập-nhật-để-đi-xem-cho-dễ-ạh-ra-rạp-thôi-đà/1026713498818919/
+match = -85.7%%
+title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
+url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [cau-ca.com]
 match = -42.9%%
