--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-07 18:27:28
+lastsearch = 2024-08-07 20:40:58
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -222,9 +222,9 @@ title = Pima County, AZ | Official Website
 url = https://www.pima.gov/
 
 [www.youtube.com]
-match = -123.5%%
-title = Như Quỳnh - Xuân Đẹp Làm Sao (Thanh Sơn) PBN 101
-url = https://www.youtube.com/watch?v=QcBvdLl0L1c
+match = -182.4%%
+title = Bông Hoa Đẹp Nhất, Suýt Nữa Thì, Một Đêm Say....| Andiez ...
+url = https://www.youtube.com/watch?v=kESfG4X6QjY
 
 [www.gsa.gov]
 match = -44.4%%
@@ -352,9 +352,9 @@ title = buc anh dep - elle man - 18
 url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-45-53-pm/
 
 [books.google.com]
-match = -158.8%%
-title = Bradshaw's monthly railway and steam navigation guide
-url = https://books.google.com/books?id=fjsGAAAAQAAJ&pg=RA2-PA41&lpg=RA2-PA41&dq=man+in+hoa+dep+18&source=bl&ots=__nukTMpWC&sig=ACfU3U0qO4ZVwV9xCyyIwxMG6qUyhEv-6g&hl=en&sa=X&ved=2ahUKEwiDjIeQ4-KHAxV_JUQIHY9-Iq8Q6AF6BAgkEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ7wrHx66&sig=ACfU3U3auZ6jvEQP8ivfF96OPil0uMFFXQ&hl=en&sa=X&ved=2ahUKEwjEkMb7gOOHAxU9EFkFHYPSOngQ6AF6BAgeEAM
 
 [www.bankrate.com]
 match = 0.0%%
