--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-08-07 17:20:33
+lastsearch = 2024-08-07 20:28:01
 
 [xoptraisan.info]
 match = -115.8%%
@@ -12,9 +12,9 @@ title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
 url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamaulac.com.vn]
-match = -31.6%%
-title = Thảm xốp ghép 60x60cm vân lá đủ màu
-url = https://thamaulac.com.vn/san-pham/tham-xop-ghep-60x60cm-van-la-du-mau
+match = -78.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [thamvinhthuan.com]
 match = 5.3%%
