CI images update

--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-07 14:51:05
+lastsearch = 2024-08-07 20:46:29
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -37,9 +37,9 @@ title = Tūī
 url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = 36.4%%
-title = TUI Cruises
-url = https://www.linkedin.com/company/tui-cruises-gmbh/
+match = -50.0%%
+title = Tui Allen - Ticketmaster
+url = https://www.linkedin.com/in/tuiallen
 
 [www.diepxuan.com]
 match = -133.3%%
@@ -74,7 +74,7 @@ url = https://www.cruisetimetables.com/tuicruises-10apr2024.html
 [www.lightology.com]
 match = -200.0%%
 title = Tui Pendant by David Trubridge - Lightology
-url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441
+url = https://www.lightology.com/index.php?module=prod_detail&prod_id=1094441&srsltid=AfmBOorms5Xm8UduGJiSLjWTkNyWjYrKEuohi8Yg4LZ0TxLQTCovs4hQ
 
 [vitalimpacts.org]
 match = -91.7%%
@@ -192,9 +192,9 @@ title = UFC Fight Night: Tuivasa vs Tybura
 url = https://www.ufc.com/event/ufc-fight-night-march-16-2024
 
 [www.thenaturaladventure.com]
-match = -325.0%%
-title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
+match = -283.3%%
+title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
 
 [www.youtube.com]
 match = -141.7%%
@@ -417,9 +417,9 @@ title = TUI Infotech - Juniper
 url = https://ejuniper.com/en/clients/tui-infotech/
 
 [www.tuimusement.com]
-match = -258.3%%
-title = Mount Vesuvius Crater Tour with Lunch at a Vineyard
-url = https://www.tuimusement.com/us/italy/sorrento/mount-vesuvius-crater-tour-with-lunch-at-a-vineyard-16/e_543nx-d_539-c_82/
+match = -241.7%%
+title = Saona Island Cruise with Private Beach and Lunch
+url = https://www.tuimusement.com/us/dominican-republic/punta-cana/saona-island-cruise-with-private-beach-and-lunch-9/e_y052g-d_3377-c_50/
 
 [ee.linkedin.com]
 match = -200.0%%
