--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-08-07 20:03:56
+lastsearch = 2024-08-07 20:56:17
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,14 +12,14 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = 30.4%%
-title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
-url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
+match = -21.7%%
+title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
+url = https://demxanh.com/chieu-truc-cao-bang.html?srsltid=AfmBOor3rqqQsdJKm01oY7hq1PVEGqMjExtW8LBUwSbSXA-IdsGDMZ8J
 
 [chieutrucsaigon.com]
-match = 43.5%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
+match = -13.0%%
+title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [shopee.vn]
 match = -65.2%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOoqsBmyY8U1528JhhxOTVzQ4nNetFI7hhqVtmiD8Fo_oOj0Ao1VB
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
