--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-08-07 18:48:29
+lastsearch = 2024-08-07 20:52:08
 
 [shopee.vn]
 match = 35.3%%
@@ -67,9 +67,9 @@ title = Chiếu điều hòa cao su non loại tốt - Mẫu 9 - Nệm Uy Tín
 url = https://nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-9/
 
 [thegioinem.com]
-match = 35.3%%
-title = 10+ mẫu chiếu điều hoà hot nhất năm
-url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
+match = 29.4%%
+title = Chiếu điều hòa cao su non là gì? Nên mua không?
+url = https://thegioinem.com/chieu-dieu-hoa-cao-su-non.html
 
 [www.hangjapan.com]
 match = 14.7%%
