--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-07 19:31:28
+lastsearch = 2024-08-07 20:47:51
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -88.0%%
-title = Địa chí thành phố Bắc Giang - Page 361 - Google Books Result
-url = https://books.google.com/books?id=joBuAAAAMAAJ&pg=PA361&lpg=PA361&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=1L_qtYqMML&sig=ACfU3U22wMXosL6bArSixxhSRpAtj8Ad9A&hl=en&sa=X&ved=2ahUKEwinoIa38eKHAxWBMlkFHWgmM0AQ6AF6BAg6EAM
+match = -64.0%%
+title = Minh Mệnh chính yếu - Volume 1 - Google Books Result
+url = https://books.google.com/books?id=NJEBAAAAMAAJ&pg=PP194&lpg=PP194&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=fix1xlywiw&sig=ACfU3U1x4aaSXvmA_Shh-696giHiX2qHIg&hl=en&sa=X&ved=2ahUKEwjgmKbAguOHAxVfGtAFHRXZIJMQ6AF6BAgiEAM
 
 [cellphones.com.vn]
 match = -52.0%%
