--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-07 16:39:14
+lastsearch = 2024-08-07 20:48:14
 
 [www.lazada.vn]
-match = -193.3%%
-title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
-url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
+match = -46.7%%
+title = Vỏ Gối Vuông 60x60 Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/
 
 [shopee.vn]
-match = 13.3%%
-title = Vỏ gối vuông Dollar 45-45cm
-url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
+match = -140.0%%
+title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
+url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
 
 [jysk.vn]
 match = -166.7%%
@@ -32,9 +32,9 @@ title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
 url = https://ninhouse.vn/collections/vo-goi-nam
 
 [lepetit.com.vn]
-match = -6.7%%
-title = Vỏ gối vuông Ấn Độ - Le Petit
-url = https://lepetit.com.vn/vo-goi-vuong-an-do
+match = -140.0%%
+title = Vỏ gối vuông sofa nhung gân sọc 45x45 cm - Le Petit
+url = https://lepetit.com.vn/vo-goi-vuong-sofa-nhung-gan-soc-45x45-cm
 
 [flexhouse.vn]
 match = -160.0%%
