CI images update

--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-07 18:14:48
+lastsearch = 2024-08-07 21:13:30
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -122,9 +122,9 @@ title = Coco Alexandra Chan
 url = https://www.facebook.com/CocoAlexandraChan/
 
 [tel.directory.gov.hk]
-match = -146.2%%
-title = Tai Po District Leisure Services Office
-url = https://tel.directory.gov.hk/0243000467_ENG.html
+match = -84.6%%
+title = Case Management Section Team A
+url = https://tel.directory.gov.hk/0227000005_ENG.html
 
 [www.ijcai.org]
 match = -261.5%%
