--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-07 13:21:36
+lastsearch = 2024-08-07 21:19:24
 
 [www.galottery.com]
 match = -7.7%%
@@ -327,9 +327,9 @@ title = Phase diagram of the binary Ga-Ni metal alloy system up to ...
 url = https://www.researchgate.net/figure/Phase-diagram-of-the-binary-Ga-Ni-metal-alloy-system-up-to-10-at-Ni-in-Ga-The-blue_fig1_356235073
 
 [www.deutschconnectorstore.com]
-match = -238.5%%
-title = 0460-204-12141 Size 12 Contact 14-12 Ga | Prowireusa
-url = https://www.deutschconnectorstore.com/p-75-deutsch-0460-204-12141-contact-14-12-ga.html
+match = -253.8%%
+title = 0460-215-16141 | Deutsch/TE | SIze 16 Contact 16-14 Ga
+url = https://www.deutschconnectorstore.com/p-76-deutsch-0460-215-16141-contact-16-14-ga.html
 
 [georgiadogs.com]
 match = -92.3%%
@@ -382,9 +382,9 @@ title = BULLY TOOLS 82525 Point Shovel,Square,14 ga.,Fiberglass
 url = https://www.pinterest.com/pin/ni-fi--769904498777677920/
 
 [www.prowireusa.com]
-match = -138.5%%
-title = 0460-204-12141 Size 12 Contact 14-12 Ga
-url = https://www.prowireusa.com/p-75-deutsch-0460-204-12141-contact-14-12-ga.html
+match = -192.3%%
+title = Deutsch 0462-203-2031 Size 12 Contact 14-12 Ga
+url = https://www.prowireusa.com/p-88-deutsch-0462-210-1231-contact-14-12-ga.html
 
 [www.dailymotion.com]
 match = -300.0%%
