--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-07 17:42:22
+lastsearch = 2024-08-07 21:13:09
 
 [thamaulac.com.vn]
-match = -22.2%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -88.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
 match = -138.9%%
@@ -17,9 +17,9 @@ title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
 url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamvinhthuan.com]
-match = 16.7%%
-title = Thảm xốp một màu 60cm x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
+match = 0.0%%
+title = Thảm xốp hoạt hình 60 x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
 
 [trieuchau.com]
 match = -5.6%%
@@ -32,9 +32,9 @@ title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ
 url = https://shopee.vn/list/thảm xốp/trải sàn
 
 [vatlieulotsan.com]
-match = -27.8%%
-title = Thảm Xốp 60 × 60 Cm Một Màu Vân Caro
-url = https://vatlieulotsan.com/tham-xop-60-x-60-cm-mot-mau-van-caro/
+match = -83.3%%
+title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
+url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [thamtuonglam.vn]
 match = 21.4%%
