--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-07 12:54:15
+lastsearch = 2024-08-07 21:14:13
 
 [www.diepxuan.com]
 match = 18.8%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOorxkEUy0hVTxibrrYo5IZWMxr7Aunpxxp2Qn-QxgUj6-GIA84z7
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -206.2%%
-title = #lipstick #foryou #foryoupage #fyp #meccamaxima #nars ...
-url = https://www.tiktok.com/@saramakeup.jpeg/video/6999173807848148226
+match = -193.8%%
+title = Wendy Dodo Sugar Box opening . . . #wendydodosugar ...
+url = https://www.tiktok.com/@unboxing_serotonin/video/7252768147143462186
 
 [archiveofourown.org]
 match = -137.5%%
