CI images update

--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-08-07 20:30:23
+lastsearch = 2024-08-07 21:32:28
 
 [www.instagram.com]
 match = -173.3%%
@@ -92,9 +92,9 @@ title =
 url = https://m.youtube.com/watch?v=4oOqe1u195o
 
 [boardofwatersupply.com]
-match = -113.3%%
-title = fmaoåŠ é€Ÿå™¨å®˜ç½'ç«™
-url = http://boardofwatersupply.com/app1dX2x/71813.shtml
+match = -233.3%%
+title = å›½å†…ä¸Šè‹±å›½ç½'ç«™åŠ é€Ÿè½¯ä»¶
+url = https://boardofwatersupply.com/app5HF6d/38684.shtml
 
 [scholars.cityu.edu.hk]
 match = -166.7%%
@@ -197,9 +197,9 @@ title = Dr. CHAN, Fefe Hoi-ka | Healing Minds
 url = https://www.healingmindshk.com/dr-chan-fefe-hoi-ka
 
 [znews.vn]
-match = -186.7%%
-title = Ông Thích Chân Quang gỡ các video thuyết giảng phản cảm
-url = https://znews.vn/ong-thich-chan-quang-go-cac-video-thuyet-giang-phan-cam-post1481744.html
+match = -200.0%%
+title = Người đàn ông liệt hai chân bị tính thiếu hơn 10 năm ...
+url = https://znews.vn/nguoi-dan-ong-liet-hai-chan-bi-tinh-thieu-hon-10-nam-huong-luong-huu-post1490331.html
 
 [research.polyu.edu.hk]
 match = 7.7%%
@@ -275,4 +275,19 @@ url = https://www.creativeboom.com/inspiration/hoi-chan/
 match = -240.0%%
 title = The SMJ Editorial Board would like to thank our reviewers ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9251213/
+
+[olm.vn]
+match = -66.7%%
+title = 1 NAM ONG DI 2 CAI CHAN HOI 150 ...
+url = https://olm.vn/cau-hoi/1-nam-ong-di-2-cai-chan-hoi-150-nam-ong-di-may-cai-chan.32025896058
+
+[hoichannuoi.vn]
+match = -126.7%%
+title = HỘI CHĂN NUÔI VIỆT NAM - ANIMAL HUSBANDRY ...
+url = https://hoichannuoi.vn/
+
+[open.spotify.com]
+match = -233.3%%
+title = Hoi Ong Troi - Nguyen Chan Phong - música y letra de Nguyên ...
+url = https://open.spotify.com/intl-es/track/4mwdd6y2VkS538TY2Yqlv2
 
