--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-07 21:18:41
+lastsearch = 2024-08-07 21:31:06
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,19 +17,19 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [shopee.vn]
-match = -42.9%%
-title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
-url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
+match = -95.2%%
+title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
+url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
 
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOopjONAQu8HIBor2d7wA5EzBZSm5cjghOzNN-nbyYoUhuL0fzvWn
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -85.7%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOoqHvvEKJ6FCA38a2MSc02AY4nwYhm-Hh_iLCzRFaRSNQoZ7Hmub
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [chieutruc.info]
 match = -71.4%%
@@ -542,9 +542,9 @@ title = Mức giá vé máy bay nội địa dịp cuối hè thấp hơn quy đ
 url = https://dangcongsan.vn/kinh-te/muc-gia-ve-may-bay-noi-dia-dip-cuoi-he-thap-hon-quy-dinh-674109.html
 
 [www.dongnai.gov.vn]
-match = -85.7%%
-title = Những điều cần biết về ngộ độc khí CO(02/08/2024)
-url = https://www.dongnai.gov.vn/Pages/newsdetail.aspx?NewsId=45824&CatId=109
+match = 11.1%%
+title = UBND tỉnh Đồng Nai
+url = https://www.dongnai.gov.vn/Pages/newsdetail.aspx?NewsId=45818&CatId=0
 
 [baonamdinh.vn]
 match = -123.8%%
