--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-07 18:00:23
+lastsearch = 2024-08-07 21:38:01
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -87,9 +87,9 @@ title = 'A Pretty Cool Experience:' Having a Kidney Transplant ...
 url = https://www.shelbynews.com/lifestyles/health/a-pretty-cool-experience-having-a-kidney-transplant-while-awake/article_e910260b-08c6-5ec2-bf9a-f21cc092c4eb.html
 
 [www.kymdan.com]
-match = 10.5%%
-title = bảng giá sản phẩm kymdan
-url = https://www.kymdan.com/bai-viet/bang-gia-san-pham-kymdan
+match = -26.3%%
+title = Nệm (mattress) Kymdan Deluxe
+url = https://www.kymdan.com/san-pham/nem-kymdan-deluxe
 
 [m.facebook.com]
 match = -115.8%%
