--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-07 18:34:24
+lastsearch = 2024-08-07 21:34:31
 
 [bedding.vn]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [changagoidemsonghong.com]
-match = -46.2%%
-title = Chăn ga gối Home mã H16-038
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h16-038
+match = -246.2%%
+title = Bảng giá Chăn Ga Gối Đệm Sông Hồng chính hãng 2024 ...
+url = https://changagoidemsonghong.com/
 
 [songhonghanoi.vn]
 match = -176.9%%
