--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-07 20:40:58
+lastsearch = 2024-08-07 21:32:08
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -617,8 +617,8 @@ title = Home | CI D8
 url = https://www.dora.colorado.gov/
 
 [www.ag.idaho.gov]
-match = 0.0%%
-title = 
+match = -29.4%%
+title = Idaho Open Meeting Law Manual
 url = https://www.ag.idaho.gov/content/uploads/2018/04/OpenMeeting.pdf
 
 [www.michigan.gov]
@@ -650,4 +650,9 @@ url = https://ffl.ifas.ufl.edu/media/fflifasufledu/docs/CCRs_Sept-20-2010_final.
 match = -58.8%%
 title = Home | DORA Division of Insurance
 url = https://doi.colorado.gov/
+
+[doh.wa.gov]
+match = -70.6%%
+title = | Washington State Department of Health
+url = https://doh.wa.gov/
 
