--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-08-07 21:21:06
+lastsearch = 2024-08-07 21:33:51
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -19,7 +19,7 @@ url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.htm
 [demxanh.com]
 match = -40.0%%
 title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac.html
+url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac.html?srsltid=AfmBOop9WAwQ1W3upoxGDo5uc6bCgIpS09m82GKdvqhbc8m-_eWFcBnL
 
 [www.facebook.com]
 match = -75.0%%
