CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-07 18:33:01
+lastsearch = 2024-08-07 22:25:34
 
 [zhangbrickshop.com]
 match = -133.3
@@ -94,7 +94,7 @@ url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-t
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 10
-url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOorWxgqnxVGmKHlTf1lplGe5oEOSVejYypv-PlVzn7STmoOaKOnt
+url = https://www.diepxuan.com/chieu-lac-d2-10.html
 
 [visana.vn]
 match = -240.0%%
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = 20.0%%
-title = Rạp Chiếu Phim Cũ
-url = https://www.facebook.com/phimhaygiare/
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [hoc247.vn]
 match = -213.3%%
@@ -342,9 +342,9 @@ title = Một con lắc lò xo thẳng đứng gồm vật nặng khối lượn
 url = https://tuyensinh247.com/bai-tap-87566.html
 
 [www.tripadvisor.com.vn]
-match = -226.7%%
-title = D2 Place (Hồng Kông, Trung Quốc) - Đánh giá - Tripadvisor
-url = https://www.tripadvisor.com.vn/Attraction_Review-g294217-d10519579-Reviews-D2_Place-Hong_Kong.html
+match = -213.3%%
+title = Kiwooza Planet D2 (Thiso Mall Thu Thiem) - Tripadvisor
+url = https://www.tripadvisor.com.vn/Attraction_Review-g293925-d26856619-Reviews-Kiwooza_Planet_D2_Thiso_Mall_Thu_Thiem-Ho_Chi_Minh_City.html
 
 [vpcqcsdt.bocongan.gov.vn]
 match = -40.0%%
@@ -430,4 +430,9 @@ url = https://vi.emilymetal.com/high-speed-tool-steel.html
 match = -100.0%%
 title = Cờ vua
 url = http://thtanthanh.phubinh.edu.vn/chuyen-mon/co-vua.html
+
+[homefarm.vn]
+match = -140.0%%
+title = Vị Trí Cửa Hàng Homefarm Tại TP Hồ Chí Minh
+url = https://homefarm.vn/pages/locationhcm
 
