--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-07 17:21:15
+lastsearch = 2024-08-07 22:19:40
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -113.3%%
-title = Ticketbox - 📣 SHOW XIẾC ĐỈNH NHẤT 2024 ...
-url = https://www.facebook.com/photo.php?fbid=692563956370327&id=100068501862168&set=a.560556426237748&locale=gn_PY
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [grandpark-vinhomes.com]
 match = -186.7%%
