--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-07 20:50:00
+lastsearch = 2024-08-07 22:23:31
 
 [everon.online]
 match = 15.4%%
@@ -204,7 +204,7 @@ url = https://happynest.vn/shop/EBGCTBM1620EPM23068/bo-ga-chun-chan-bon-mua-best
 [tiki.vn]
 match = -34.6%%
 title = Bộ GA CHUN CHẦN bốn mùa ESM21011 160*200, 180* ...
-url = https://tiki.vn/bo-ga-chun-chan-bon-mua-esm21011-160-200-180-200-200-220-p180961652.html
+url = https://tiki.vn/bo-ga-chun-chan-bon-mua-esm21011-160-200-180-200-200-220-p139698447.html?spid=139698465
 
 [everonthuduc.com]
 match = -46.2%%
