--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-07 19:41:14
+lastsearch = 2024-08-07 22:23:52
 
 [shopee.vn]
-match = 4.3%%
-title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Hàng-Việt-Nam-Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-i.398388048.13666402755
+match = -17.4%%
+title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
+url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [www.facebook.com]
 match = 52.2%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = -34.8%%
-title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
-url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
+match = -69.6%%
+title = Chiếu Cói Thái Bình Siêu Tốt, Giá Gốc, Thanh Toán Khi ...
+url = https://www.sendo.vn/chieu-coi-thai-binh.htm
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -37,9 +37,9 @@ title = Sản xuất theo chiều hướng hiện đại, quy mô lớn
 url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-mo-lon
 
 [www.lazada.vn]
-match = -69.6%%
-title = (CỠ ĐẠI- SIZE TO) Chiếu Nhựa Gập Đôi Gấp Gọn, Không ...
-url = https://www.lazada.vn/products/co-dai-size-to-chieu-nhua-gap-doi-gap-gon-khong-tham-nuoc-hang-viet-nam-i1553077012.html
+match = -17.4%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [chuyenhangviet.com]
 match = -82.6%%
