--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-07 21:37:21
+lastsearch = 2024-08-07 22:30:06
 
 [shopee.vn]
-match = 44.0%%
-title = MÀN CHỤP TỰ BUNG ĐỈNH VUÔNG THIÊN ...
-url = https://shopee.vn/MÀN-CHỤP-TỰ-BUNG-ĐỈNH-VUÔNG-THIÊN-TRƯỜNG_HÀNG-VIỆT-NAM-CAO-CẤP-i.425078119.10400888661
+match = 48.0%%
+title = Màn Chụp Tự Bung đỉnh vuông Mùng ...
+url = https://shopee.vn/Màn-Chụp-Tự-Bung-đỉnh-vuông-Mùng-Chụp-Đỉnh-Vuông-viền-trơn-cao-cấp-i.92196959.13058100091
 
 [munghoangphat.com]
 match = 48.0%%
@@ -49,7 +49,7 @@ url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 [www.lazada.vn]
 match = 4.0%%
 title = Màn đỉnh Vuông Tự Bung Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/?srsltid=AfmBOorfb6DvpbphI93AQxJRckcbp7RmbPNTS7ei7cFu2Nq_qJlLaQ7K
+url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/
 
 [demxanh.com]
 match = 12.0%%
