--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-07 20:07:50
+lastsearch = 2024-08-07 22:24:33
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = 10.0%%
+title = Anti-Korean sentiment
+url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -23,8 +23,8 @@ url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-miss
 
 [www.tiktok.com]
 match = 0.0%%
-title = Nancy Parker Watertown Ny
-url = https://www.tiktok.com/discover/nancy-parker-watertown-ny
+title = Eden Centwr Riot
+url = https://www.tiktok.com/discover/eden-centwr-riot
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -43,8 +43,8 @@ url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
 match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+title = USD to JPY forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-jpy-forecast-converter-dollar-to-yen
 
 [www.akc.org]
 match = -45.0%%
