--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-08-07 20:48:57
+lastsearch = 2024-08-07 22:21:46
 
 [demxanh.com]
 match = -41.2%%
@@ -17,9 +17,9 @@ title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
 url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=44108490
 
 [www.lazada.vn]
-match = -135.3%%
-title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
-url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
+match = -164.7%%
+title = Thảm Trải Sàn Nhập Khẩu Cao Cấp, Sang Trọng, 2mx3m ...
+url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-cao-cap-sang-trong-2mx3m-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinh-decor-tham-trang-tri-trai-san-sofa-sang-trong-hien-dai-bali-in-3d-i2111887933.html
 
 [thegioidemviet.vn]
 match = -182.4%%
