CI images update

--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -38,18 +38,18 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
 match = 10.5%%
-title = Bộ Everon Epm-21071
-url = https://everon.net.vn/everon/2130/bo-everon-epm-21071
+title = Bộ Everon Epm-21070
+url = https://everon.net.vn/everon/2131/bo-everon-epm-21070
 
 [sieuthidemhanquoc.com.vn]
-match = 22.2%%
-title = Bộ chăn ga gối Everon EPM-21060
-url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-epm-21060-1523
+match = 18.5%%
+title = Bộ chăn ga gối Everon EPT-21045
+url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-ept-21045-1527
 
 [shopee.vn]
-match = -74.1%%
-title = Ga chun chần Mariza Everon 200x220cm EP giá tốt Tháng ...
-url = https://shopee.vn/search?keyword=Ga chun chần Mariza Everon 200x220cm EP
+match = -70.4%%
+title = Ga chun chần Everon Tara 200x220cm ES giá tốt Tháng 8 ...
+url = https://shopee.vn/search?keyword=Ga chun chần Everon Tara 200x220cm ES
 
 [tiki.vn]
 match = -70.4%%
