--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-08-07 13:43:50
+lastsearch = 2024-08-07 22:56:43
 
 [everon.online]
 match = 50.0%%
@@ -12,9 +12,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [everonvn.com.vn]
-match = -4.3%%
-title = Bộ chăn ga Everon SR-16
-url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
+match = 5.9%%
+title = Bộ Ga Chun At-04 Giảm Giá - chăn ga gối đệm Everon
+url = https://everonvn.com.vn/everon/136/bo-he-everon
 
 [tiki.vn]
 match = 29.4%%
@@ -22,9 +22,9 @@ title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
 url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = 17.9%%
-title = Bộ chăn ga Everon EPBC-25014
-url = https://everonhanquoc.com.vn/bo-chan-ga-everon-epbc-25014-pd.html
+match = -8.8%%
+title = Bộ chăn ga Everon EPM-22060 tone màu ghi đậm và nhạt
+url = https://everonhanquoc.com.vn/bo-chan-ga-everon-epm-22060-pd.html
 
 [everonhn.com.vn]
 match = 22.2%%
