--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-07 09:48:09
+lastsearch = 2024-08-07 22:45:15
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -132,9 +132,9 @@ title = The Bodog Group|Nơi Cá Cược Casino Hàng Đầu Châu Á
 url = https://hawater.com.vn/bmw769346.xhtm
 
 [vietnamese.alibaba.com]
-match = -153.3%%
-title = Chiều Cao HT-M15-3 220V Nhựa Bể Nước Chuyển Đổi ...
-url = https://vietnamese.alibaba.com/product-detail/HEIGHT-HT-M15-3-220v-Plastic-60724422925.html
+match = -226.7%%
+title = Thiết Kế Mới Nhỏ Mini Máy Xúc 1.5 Tấn HT15 Chức Năng Tùy ...
+url = https://vietnamese.alibaba.com/product-detail/new-design-small-mini-excavators-1-5-ton-ht15-optional-function-swing-boom-and-extendable-track-1600398729442.html?isSpider=true
 
 [congnghehoangtien.com]
 match = -160.0%%
@@ -220,4 +220,9 @@ url = https://thanhdatled.com/den-led-chieu-cay-15w.html
 match = -100.0%%
 title = Đèn LED Trồng Cây Nội Thất CX50W - Hachi
 url = https://hachi.com.vn/den-led-trong-cay-noi-that-hc50w/
+
+[luxbath.vn]
+match = -73.3%%
+title = Phòng xông hơi khô Daros HT-15 1.2m
+url = https://luxbath.vn/phong-xong-hoi-kho-daros-ht-15-1-2m-p11828.html
 
