--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-07 20:03:15
+lastsearch = 2024-08-07 22:52:51
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -73.3%%
-title = CHIA SẼ và CHO THUÊ MẶT BẰNG VỈA HÈ
-url = https://www.facebook.com/groups/301813963912725/
+match = -66.7%%
+title = Baïeta - Cocktails & Chic tapas
+url = https://www.facebook.com/baietasaigon.restaurant/
 
 [lacvietauction.vn]
 match = -80.0%%
