--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-07 20:37:30
+lastsearch = 2024-08-07 22:57:23
 
 [thegioidemviet.vn]
 match = 21.4%%
@@ -27,9 +27,9 @@ title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN ...
 url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
 
 [demxanh.com]
-match = -7.1%%
-title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
-url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
+match = -25.0%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqN4jS3VSYaHzMLR3dpGQ-nOAGvmE3qbV0m6iYMeuTNIZWWDqe0
 
 [tiki.vn]
 match = -39.3%%
