--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-07 19:39:29
+lastsearch = 2024-08-07 22:52:09
 
 [www.zillow.com]
 match = -115.4%%
@@ -665,4 +665,9 @@ url = https://ucr.fbi.gov/nics/appeals/nics-guide-for-appealing
 match = -300.0%%
 title = Highly mobile twin boundaries in seven-layer modulated Ni ...
 url = https://www.sciencedirect.com/science/article/pii/S1359646219306359
+
+[www.google.com]
+match = -23.1%%
+title = Itinéraire Google Maps
+url = https://www.google.com/maps/dir
 
