--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-07 21:32:08
+lastsearch = 2024-08-07 22:45:58
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -354,7 +354,7 @@ url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-20
 [books.google.com]
 match = -194.1%%
 title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ7wrHx66&sig=ACfU3U3auZ6jvEQP8ivfF96OPil0uMFFXQ&hl=en&sa=X&ved=2ahUKEwjEkMb7gOOHAxU9EFkFHYPSOngQ6AF6BAgeEAM
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+18&source=bl&ots=rUQ7wsEC65&sig=ACfU3U0yQ08T4UahdU-v03kZ6yJF0SbzTw&hl=en&sa=X&ved=2ahUKEwi2yLvznOOHAxUzAzQIHbfFB7AQ6AF6BAgrEAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -617,8 +617,8 @@ title = Home | CI D8
 url = https://www.dora.colorado.gov/
 
 [www.ag.idaho.gov]
-match = -29.4%%
-title = Idaho Open Meeting Law Manual
+match = 0.0%%
+title = 
 url = https://www.ag.idaho.gov/content/uploads/2018/04/OpenMeeting.pdf
 
 [www.michigan.gov]
