--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-07 20:28:22
+lastsearch = 2024-08-07 22:46:17
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -165.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -145.0%%
-title = Authentic Korean Street Food in Parramatta | Tteobokki & ...
-url = https://www.tiktok.com/@jensfoodfeed/video/7326417846177697025
+match = -170.0%%
+title = me vs sour 😖 thank you @Fruit Riot for sending me these to try ...
+url = https://www.tiktok.com/@peachcreamsoda/video/7398389927420906783
 
 [www.imdb.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -90.0%%
-title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
-url = https://en.yna.co.kr/view/AEN20130109006800325
+match = -105.0%%
+title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
+url = https://en.yna.co.kr/view/AEN20180406000600320
 
 [www.vlr.gg]
 match = -145.0%%
