--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-08-07 17:50:06
+lastsearch = 2024-08-07 22:53:30
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOoqbJdI3miW08fmeC0YsmVQCUK2M2nxTc9WwH3Bvn9FQl7SgvopL
 
 [everonthaiha.com]
 match = 35.3%%
@@ -29,7 +29,7 @@ url = https://everon.online/collections/topper-tam-tang-tien-nghi
 [www.lazada.vn]
 match = -66.7%%
 title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tam-trai-everon/
+url = https://www.lazada.vn/tag/tam-trai-everon/?srsltid=AfmBOorTLny9RlQzztxL4RPDgeeGyu_f3ly2O2idlGoTYaaUV3GgIHFl
 
 [www.everonvn.vn]
 match = -20.8%%
