--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-08-07 19:24:51
+lastsearch = 2024-08-07 22:47:58
 
 [www.sendo.vn]
 match = 0.0%%
@@ -34,7 +34,7 @@ url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-x
 [www.lazada.vn]
 match = -109.1%%
 title = Thảm Xốp Lót Sàn - BỘ gồm 18 MIẾNG
-url = https://www.lazada.vn/products/tham-xop-lot-san-bo-gom-18mieng-i1865380749.html
+url = https://www.lazada.vn/products/tham-xop-lot-san-bo-gom-18mieng-i1865380749.html?srsltid=AfmBOorZwUmO-sjx8CDtRaoCiQ41H0b-VpFCGUxBorUqlLLh6EvhPtfQ
 
 [tayphuthuan.com]
 match = -154.5%%
@@ -62,9 +62,9 @@ title = A new micropolydesmoid millipede of the genus Eutrichodesmus ...
 url = https://zookeys.pensoft.net/article/57411/list/18/
 
 [thamxoplotsan.com]
-match = -136.4%%
-title = Thảm Tập Võ 18mm - Thảm Xốp Lót Sàn
-url = https://thamxoplotsan.com/tham-tap-vo-18mm/
+match = -127.3%%
+title = Thảm Xốp Trải Sàn Cho Công Nhân 18mm
+url = https://thamxoplotsan.com/tham-xop-trai-san-cho-cong-nhan-18mm/
 
 [thamtapvo.com]
 match = -118.2%%
