--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-07 22:22:08
+lastsearch = 2024-08-07 23:20:48
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -180.0%%
-title = MOVSA - Melbourne Overseas Vietnamese Student ...
-url = https://www.facebook.com/movsa.vn/posts/-𝐃𝐄𝐏𝐀𝐑𝐓𝐔𝐑𝐄-𝐁𝐑𝐈𝐄𝐅𝐈𝐍𝐆-𝐊𝐈𝐂𝐊-𝐒𝐓𝐀𝐑𝐓-️𝐌𝐎𝐕𝐒𝐀-𝐱-𝐒𝐄𝐓-𝐄𝐃𝐔𝐂𝐀𝐓𝐈𝐎𝐍___________________________/754660916690225/
+match = -240.0%%
+title = Địa điểm ăn uống - BÒ BÍT TẾT (Beefsteak) * (Hình) Hoa ...
+url = https://www.facebook.com/photo.php?fbid=147183691975666&id=140144812679554&set=a.140519585975410&locale=vi_VN
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -297,9 +297,9 @@ title = Đèn chiếu LMP-D214 SONY - Projector Lamp Replacement
 url = https://m.vietnamese.projectorlamp-replacement.com/sale-41292319-lmp-d214-replacement-sony-projector-lamp-vpl-d200-vpl-dx220-vpl-dw240-dx270.html
 
 [www.thientongvietnam.net]
-match = 7.1%%
-title = TRẦN THÁI TÔNG
-url = http://www.thientongvietnam.net/kinhsach-thike/dirs/khoahuluc/unicode/p1.html
+match = -186.7%%
+title = Tuệ sanh từ sức định. Nếu tâm định thì gương tuệ ...
+url = http://www.thientongvietnam.net/kinhsach-thike/dirs/khoahuluc/unicode/p10.html
 
 [www.gjust.ac.in]
 match = -266.7%%
