--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-08-07 22:12:58
+lastsearch = 2024-08-07 23:16:18
 
 [sieuthidemonline.vn]
 match = -19.0%%
@@ -24,12 +24,12 @@ url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 [demxanh.com]
 match = -81.0%%
 title = [Cập nhật] Bảng giá đệm lò xo Tuấn Anh mới nhất 2020
-url = https://demxanh.com/cap-nhat-bang-gia-dem-lo-xo-tuan-anh-moi-nhat-2020.html
+url = https://demxanh.com/cap-nhat-bang-gia-dem-lo-xo-tuan-anh-moi-nhat-2020.html?srsltid=AfmBOooy-ivgbHm34jEVBgjqbhHKvBDJtm9e_aJuzUE0mx3E0cI-rhQv
 
 [www.diepxuan.com]
 match = 4.8%%
 title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
+url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html?srsltid=AfmBOooINSrECYBrenvmcd9IQqMapZ-H7KSxTMUWfSHA3gNA51gd-8wk
 
 [shopee.vn]
 match = -61.9%%
