--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-07 22:44:07
+lastsearch = 2024-08-07 23:19:48
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -58,8 +58,8 @@ url = https://profiles.ucsf.edu/christopher.dvorak
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
-title = Uncoupling Proteins: Role in Insulin Resistance and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3060851/
+title = Exercise in patients with inflammatory bowel diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = -41.7%%
@@ -337,9 +337,9 @@ title = Admiral Boulevard
 url = https://mostateparks.com/sites/mostateparks/files/Parks-Blvds-AL Survey.pdf
 
 [faculty.uci.edu]
-match = -115.0%%
-title = Nathan D. Wong - UC Irvine - Faculty Profile System
-url = https://faculty.uci.edu/profile/?facultyId=2414
+match = -120.0%%
+title = Nosratola D. Vaziri - UCI Faculty Profile - UC Irvine
+url = https://faculty.uci.edu/profile/?facultyId=2994
 
 [www.cia.gov]
 match = -35.0%%
