--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-07 22:25:34
+lastsearch = 2024-08-07 23:48:54
 
 [zhangbrickshop.com]
 match = -133.3
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -26.7%%
+title = Du học Hàn Quốc - ANIDO
+url = https://www.facebook.com/duhochanquoc.anido/posts/tin-vui-cho-du-học-sinh-d2-d10-có-thể-xin-visa-cư-trú-tại-10-tỉnh-thành-của-hq-n/722079063361574/
 
 [hoc247.vn]
 match = -213.3%%
@@ -134,7 +134,7 @@ url = https://katinat.vn/cua-hang-2/
 [bibomart.com.vn]
 match = -13.3%%
 title = BioAmicus Vitamin D3K2
-url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html?srsltid=AfmBOopU-PCsTG7jLEO-1UJUg_HEEWT-NJSJDzyGvMSfhu2QHaW6AyxS
+url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html
 
 [www.nhathuocankhang.com]
 match = -220.0%%
@@ -289,7 +289,7 @@ url = https://rentapartment.vn/vietnam-zip-postal-code/
 [alphardaudio.us]
 match = -100.0%%
 title = Machete ML-10S D2 10" 600W MAX Subwoofer
-url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer?srsltid=AfmBOooRC_PDA_-Vz7Q1NMIT_x_86oWi2oeUv-upkERPq0KCT8DuPNri
+url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer
 
 [www.handspan.com]
 match = -126.7%%
