--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-07 22:15:45
+lastsearch = 2024-08-07 23:42:53
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -193.8%%
-title = #58.Hướng Dẫn Cách Lắp Bảng Lề Xoay | Cửa Cổng Cho Ai ...
-url = https://www.youtube.com/watch?v=JXckUMr9AoA
+match = -187.5%%
+title = Cười 1000 Lần Vì Hài Quá Hay 👈 Hài Tuấn Dũng, Minh Dự ...
+url = https://www.youtube.com/watch?v=SGuVuoPPUdo
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -157,9 +157,9 @@ title = số đỏ casino xs 24|Casino Online Châu Á
 url = https://sinhvien.mit.vn/số-đỏ-casino-xs-24.phtm
 
 [www.facebook.com]
-match = -6.2%%
-title = Mộng không thường.
-url = https://www.facebook.com/mongkhongthuong/
+match = -212.5%%
+title = Thể thức mới của Champions League sẽ tạo nên nhiều cuộc ...
+url = https://www.facebook.com/Onsportchannel/videos/thể-thức-mới-của-champions-league-sẽ-tạo-nên-nhiều-cuộc-đại-chiến-cạnh-tranh-cho/1132596871144109/
 
 [www.bthh.org.vn]
 match = -68.8%%
@@ -382,9 +382,9 @@ title = Chương 18: Lạc Hoa Lưu Thủy - Cổng ...
 url = https://docln.net/truyen/16494-noi-phien-muon-cua-cong-chua-ma-ca-rong-hikikomori/c135951-chuong-18-lac-hoa-luu-thuy
 
 [atgt.baogiaothong.vn]
-match = -175.0%%
-title = TP.HCM: Hiệu quả bất ngờ khi “mỗi người dân là một CSGT”
-url = https://atgt.baogiaothong.vn/tphcm-hieu-qua-bat-ngo-khi-moi-nguoi-dan-la-mot-csgt-192240801234817756.htm
+match = -237.5%%
+title = Đường sắt Bắc - Nam thông tuyến sau sự cố tàu SE2 trật bánh ...
+url = https://atgt.baogiaothong.vn/duong-sat-bac-nam-thong-tuyen-sau-su-co-tau-se2-trat-banh-o-thua-thien-hue-192240807190057721.htm
 
 [www.cantho.gov.vn]
 match = -6.2%%
@@ -720,4 +720,19 @@ url = https://concuame.com/forum/viewtopic.php?f=12&t=1606
 match = -200.0%%
 title = https://www.google.com/maps/@21.0506866,105.804746...
 url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
+
+[baobacgiang.vn]
+match = -200.0%%
+title = Khám phá "Đà Lạt thu nhỏ" ở Bắc Giang chỉ cách Hà Nội ...
+url = https://baobacgiang.vn/kham-pha-da-lat-thu-nho-o-bac-giang-chi-cach-ha-noi-100km-085900.bbg
+
+[www.qdnd.vn]
+match = -225.0%%
+title = “Chốt nợ” bằng thi ca, Nhà thơ, cựu chiến binh Trịnh Duy ...
+url = https://www.qdnd.vn/van-hoa/van-hoc-nghe-thuat/chot-no-bang-thi-ca-788604
+
+[cmc-u.edu.vn]
+match = -81.2%%
+title = Trường Đại học CMC | CMC University
+url = https://cmc-u.edu.vn/
 
