--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-07 15:47:31
+lastsearch = 2024-08-07 23:36:09
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKDo5wrsh&sig=ACfU3U3Po-fKMw2qidbLovjOnB2FVigxlg&hl=en&sa=X&ved=2ahUKEwjg3tWvv-KHAxXSD1kFHcOuM2gQ6AF6BAhBEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKDo7Estp&sig=ACfU3U0V1NTkMUa4LpnBtkfut2S621wcyA&hl=en&sa=X&ved=2ahUKEwjYi6iPqOOHAxVNg4kEHXbOJVsQ6AF6BAgbEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -432,9 +432,9 @@ title =
 url = https://www.edsullivan.com/artists/edith-piaf/
 
 [www.jstor.org]
-match = -76.2%%
-title = Pindar, "Nem." 5 - Nereids with Golden Distaffs
-url = https://www.jstor.org/stable/20538961
+match = -52.4%%
+title = A Reinterpretation of Pindar, Nem. 4.57-58
+url = https://www.jstor.org/stable/41234355
 
 [buckinghampalace.co.uk]
 match = 0.0%%
