--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-08-07 16:37:32
+lastsearch = 2024-08-07 23:41:24
 
 [dreamland.vn]
-match = 18.2%%
-title = Chăn ga gối đệm cao cấp Dreamland
-url = http://dreamland.vn/
+match = 7.5%%
+title = Dreamland chuyên chăn ga gối đệm cao cấp
+url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Dreamland Úc freesize NK gấm PT
 url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.html
 
 [demluxury.com.vn]
-match = 31.6%%
-title = Bộ chăn ga gối Cotton MOC 01 Dreamland
-url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-01-dreamland/
+match = 47.8%%
+title = Chăn ga gối Dreamland Sale Off lên tới 50%% tại ...
+url = https://demluxury.com.vn/danh-muc-san-pham/chan-ga-goi-dem-dreamland/chan-ga-goi-dreamland/
 
 [www.facebook.com]
 match = -8.0%%
