--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-07 23:34:29
 
 [search]
-lastsearch = 2024-08-07 16:29:16
+lastsearch = 2024-08-07 23:40:00
 
 [demre.com.vn]
-match = 61.1%%
-title = Chiếu nhựa 160x200
-url = https://demre.com.vn/chieu-nhua-160x200
+match = 33.3%%
+title = Chiếu nhựa 1m2x1m9
+url = https://demre.com.vn/chieu-nhua-1m2x1m9
 
 [www.facebook.com]
 match = 42.1%%
@@ -32,14 +32,14 @@ title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1,6m x2m)
 url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-16m-x2m-i1122594208.html
 
 [www.diepxuan.com]
-match = 44.0%%
-title = Chiếu nhựa Hà Nội 180x300 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html
+match = 20.0%%
+title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
 
 [demxanh.com]
-match = 16.0%%
-title = Chiếu Trúc Tăm Rồng kiểu 1 - Hà Nội
-url = https://demxanh.com/chieu-truc-tam-rong-kieu-1.html
+match = -28.0%%
+title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [shopee.vn]
 match = 36.0%%
