--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-07 22:43:46
+lastsearch = 2024-08-07 23:49:56
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -235,4 +235,9 @@ url = https://baodautu.vn/top-10-thuong-vu-ma-noi-bat-giua-cac-doanh-nghiep-viet
 match = -83.3%%
 title = Công ty TNHH MTV Xổ số kiến thiết Thành phố Hồ Chí Minh
 url = https://www.xskthcm.com/
+
+[support.microsoft.com]
+match = -25.0%%
+title = MAX (Hàm MAX) - Hỗ trợ của Microsoft
+url = https://support.microsoft.com/vi-vn/office/max-hàm-max-e0012414-9ac8-4b34-9a47-73e662c08098
 
