--- a/images/chieu-truc-den-khong-vien-lson-18/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-18.html
 lastopen = 2024-06-07 00:19:36
 
 [search]
-lastsearch = 2024-08-07 22:29:45
+lastsearch = 2024-08-07 23:39:00
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = CHIẾU TRÚC 1M8 HẠT VÀNG KHÔNG VIỀN TPHCM
 url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-1m8-hat-vang-khong-vien-tphcm-80.html
 
 [shopee.vn]
-match = -3.0%%
-title = Chiếu trúc 1m6 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m6
+match = 3.0%%
+title = Chiếu trúc hạt đen không viền (hàng VN cao cấp loại 1, BH ...
+url = https://shopee.vn/Chiếu-trúc-hạt-đen-không-viền-(hàng-VN-cao-cấp-loại-1-BH-1-năm)-i.76806530.1285760215
 
 [vongxepsaigon.vn]
 match = 27.3%%
