--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-07 19:40:11
+lastsearch = 2024-08-07 23:52:43
 
 [www.tiktok.com]
 match = -235.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -229.4%%
-title = Lexicon Palaeslovenico-Græco-Latinum emendatum auctum edidit ...
-url = https://books.google.com/books?id=QBJhAAAAcAAJ&pg=PA10&lpg=PA10&dq=man+in+hoa+dep+16&source=bl&ots=rtyW-DdhMf&sig=ACfU3U1OFumg8HwIPJWO-1dzVpXRUqsUBA&hl=en&sa=X&ved=2ahUKEwiWr6Ww8-KHAxW4FlkFHTp5BewQ6AF6BAgrEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ7wsIC71&sig=ACfU3U0vJZ7Gl2EltPqfDnZuX1jdiTRvqQ&hl=en&sa=X&ved=2ahUKEwjitMrpq-OHAxWgkYkEHcItItgQ6AF6BAg9EAM
 
 [tax.vermont.gov]
 match = -29.4%%
