--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-07 21:13:09
+lastsearch = 2024-08-07 23:48:11
 
 [thamaulac.com.vn]
 match = -88.9%%
@@ -17,19 +17,19 @@ title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
 url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamvinhthuan.com]
-match = 0.0%%
-title = Thảm xốp hoạt hình 60 x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
+match = 16.7%%
+title = Thảm xốp một màu 60cm x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [trieuchau.com]
-match = -5.6%%
-title = Thảm Xốp Trải Sàn Một Màu 60x60 cm
-url = https://trieuchau.com/vi-vn/1057/27906/Tham-Xop-60x60cm/Tham-Xop-Trai-San-Mot-Mau-60x60-cm
+match = -72.2%%
+title = 60*60*10 tấm- Thảm xốp mặt nỉ hoa văn Âu Lạc
+url = http://trieuchau.com/vi-vn/1057/28071/Tham-Xop-60x60cm/606010-tam-Tham-xop-mat-ni-hoa-van-Au-Lac
 
 [shopee.vn]
-match = -138.9%%
-title = Thảm xốp trải sàn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm xốp/trải sàn
+match = -100.0%%
+title = Thảm Xốp Ghép Sàn, Thảm Nỉ Ghép Sàn Tường Lâm 60*60
+url = https://shopee.vn/Thảm-Xốp-Ghép-Sàn-Thảm-Nỉ-Ghép-Sàn-Tường-Lâm-60*60-Hàng-Việt-Nam-10-Tâm-Bịch-i.167631306.14814457758
 
 [vatlieulotsan.com]
 match = -83.3%%
@@ -42,9 +42,9 @@ title = Thảm Tường Lâm
 url = https://thamtuonglam.vn/
 
 [thamachau.vn]
-match = -55.6%%
-title = Thảm xốp mặt nỉ hoa văn Âu Lạc 60*60*10 tấm
-url = http://thamachau.vn/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam521
+match = -27.8%%
+title = Thảm xốp 1 màu vân caro 60*60*6 tấm
+url = http://thamachau.vn/tham-xop-1-mau-van-caro-60-60-6-tam520
 
 [thamsami.com]
 match = -94.4%%
