CI images update

--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-07 18:13:03
+lastsearch = 2024-08-07 23:51:57
 
 [www.instagram.com]
 match = -123.1%%
@@ -107,9 +107,9 @@ title = WAI SENG CHAN - Senior Sales Associate - Christian Dior ...
 url = https://my.linkedin.com/in/wai-seng-chan-791010270
 
 [www.dior.com]
-match = -30.8%%
-title = Dior official website
-url = https://www.dior.com/en_hk
+match = -246.2%%
+title = Dior Boutique | China | Xi'an | 261 Chang'An Road North
+url = https://www.dior.com/fashion/stores/en_us/china/xian/261-changan-road-north
 
 [www.gettyimages.fr]
 match = -253.8%%
@@ -224,7 +224,7 @@ url = https://www.blue17.co.uk/vintage-blog/midcentury-models-renee-breton/
 [shopee.vn]
 match = -176.9%%
 title = chăn ga dior giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/ 
+url = https://shopee.vn/search?keyword=chăn ga dior&urlold=chan-ga-lua-thuong-hieu-dior/990638083154560956/343220106741734172/
 
 [hongkongfp.com]
 match = -269.2%%
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -230.8%%
-title = South Korea: First lady's Dior bag shakes ... - BBC
+match = -261.5%%
+title = South Korea: First lady's Dior bag shakes country's ...
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
