--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-07 19:37:01
+lastsearch = 2024-08-08 00:01:57
 
 [chanrathanhthuy.com]
 match = -3.2%%
@@ -12,14 +12,14 @@ title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
-match = 38.7%%
-title = Bộ chăn ga gối Singapore King Luxury KL2418
-url = https://demxanh.com/bo-chan-ga-goi-singapore-king-luxury-kl2418.html
+match = -6.5%%
+title = Chăn ga gối Singapore Perfect Mordern Collection PM18
+url = https://demxanh.com/chan-ga-goi-singapore-perfect-modern-collection-pm18.html
 
 [songhongonline.vn]
 match = 50.0%%
-title = Bộ chăn ga gối SH_UT24 203
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
+title = Bộ chăn ga gối SH_UT23 032
+url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-027
 
 [changagoidemsonghong.com]
 match = -29.0%%
