--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-07 22:47:18
+lastsearch = 2024-08-07 23:57:37
 
 [demxanh.com]
 match = 34.5%%
@@ -12,14 +12,14 @@ title = Chiếu điều hòa cao su non Tencel xanh nhạt
 url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
-match = 3.4%%
-title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
+match = -13.8%%
+title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [thegioichieutruc.com]
-match = -31.0%%
-title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
+match = 51.7%%
+title = Chiếu điều hòa cao su non Tencel ghi
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-ghi/
 
 [demchinhhang.com]
 match = -20.7%%
