--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-07 21:34:12
+lastsearch = 2024-08-08 00:25:48
 
 [everon.com.vn]
-match = 11.1%%
-title = Bộ Chăn Ga Everon EPM-23063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-23063/?srsltid=AfmBOoroD0jZw8S8ESrFLQorsm8P8kmTBRbT4D_JCUNzI1HQB5XmprWR
+match = 14.8%%
+title = Bộ Chăn Ga Everon EPM 22063
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOop4Tz_pp9TzPzwQ4m8EMUjyxx1uj4HiOpxaoaB5TKYL1bAlpD7D
 
 [everon.online]
-match = 38.2%%
-title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
+match = -50.0%%
+title = Bộ Everon EPM23062
+url = https://everon.online/products/bo-everon-epm23062
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -29,7 +29,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOorF11IZBQY213iRr8ayAPvMjDfzv_gTxTCbQ19bkgFldS3f8dwj
 
 [www.diepxuan.com]
 match = 100.0%%
