--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-phu-warmdream-freesize-phi-lua.html
 lastopen = 2024-06-10 00:45:38
 
 [search]
-lastsearch = 2024-08-07 16:24:04
+lastsearch = 2024-08-08 00:16:38
 
 [changagoidem.co]
 match = 8.3%%
@@ -17,9 +17,9 @@ title = Bộ Chăn Ga Gối Phi Lụa Dream CiTY Chăn Hè, Chất Liệu ...
 url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Phi-Lụa-Dream-CiTY-Chăn-Hè-Chất-Liệu-Mềm-Mướt-Đơn-Sắc-Set-4-Món-Tiêu-Chuẩn-i.1053999936.24566428759
 
 [hethongnemtot.com]
-match = -60.0%%
-title = Drap Bộ Phi Lụa
-url = https://hethongnemtot.com/drap-bo-phi-lua
+match = -5.3%%
+title = BỘ DRAP MỀN PHI LỤA
+url = https://hethongnemtot.com/bo-drap-men-phi-lua
 
 [www.facebook.com]
 match = 33.3%%
@@ -34,7 +34,7 @@ url = https://sieuthimuare.com/chan-ga-goi-phi-lua-chan-bong/
 [vuanem.com]
 match = -2.8%%
 title = Top 15 mẫu drap giường phi lụa được yêu thích nhất
-url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html?srsltid=AfmBOor3Sl0hvbQLth2H4seg6egoBAmzJMDZCR5SMNv2VJ07zcL8AEhq
+url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html?srsltid=AfmBOoq1CedWiUdePpQobRgOPpgc7K8gnZNFoKIOwsnC-lkBf3igI_OS
 
 [diepxuan.com]
 match = 17.1%%
