--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-07 23:17:22
+lastsearch = 2024-08-08 00:31:20
 
 [en.wikipedia.org]
 match = -31.2%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=c6962d47ebed13d5&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj3vPX1o-OHAxW7PTQIHXGaMsUQsZYEegQILRAC
+url = https://www.google.com/search?sca_esv=f10c793940d61d3a&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwi2hbW6tOOHAxWLEFkFHUsMLPAQsZYEegQIVBAC
 
 [produccionesitaca.es]
 match = -21.4%%
