--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-08-07 13:52:07
+lastsearch = 2024-08-08 00:22:57
 
 [www.diepxuan.com]
 match = 37.5%%
-title = Điệp Xuân Thảm giường nỉ 120x190
-url = https://www.diepxuan.com/tham-giuong-ni-120x190.html?srsltid=AfmBOordO-WTINWl7syS2Nd7jrSIwN8wzzZGsu36MX9vYUo37mv4Vds6
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [www.tripadvisor.com]
 match = -112.5%%
