--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-08 00:03:44
+lastsearch = 2024-08-08 00:24:23
 
 [www.diepxuan.com]
-match = 36.4%%
-title = Điệp Xuân Thảm giường Bode 140x190
+match = 27.3%%
+title = Thảm giường Bode 140x190 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
 
 [tiki.vn]
