--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-07 12:52:33
+lastsearch = 2024-08-08 00:15:17
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -37,9 +37,9 @@ title = Shawkat Hammoudeh, PhD - LeBow College of Business
 url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke | UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -21.1%%
+title = Karen Messer | UCSD Profiles
+url = https://profiles.ucsd.edu/karen.messer
 
 [medboard.nv.gov]
 match = -136.8%%
@@ -407,7 +407,7 @@ title =
 url = https://www.prnewswire.com/news-releases/announcing-the-2024-us-presidential-scholars-in-the-arts-302141477.html
 
 [dcc.ligo.org]
-match = -78.9%%
-title = LSC Feb 2018 author list (tex) - LIGO DCC
+match = -152.6%%
+title = https://dcc.ligo.org/public/0150/M1800027/005/LSC-...
 url = https://dcc.ligo.org/public/0150/M1800027/005/LSC-Authors-Feb-2018.tex
 
