--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-08 00:25:48
+lastsearch = 2024-08-08 01:27:17
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOop4Tz_pp9TzPzwQ4m8EMUjyxx1uj4HiOpxaoaB5TKYL1bAlpD7D
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
 match = -50.0%%
@@ -29,7 +29,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOorF11IZBQY213iRr8ayAPvMjDfzv_gTxTCbQ19bkgFldS3f8dwj
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
 
 [www.diepxuan.com]
 match = 100.0%%
