--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-07 22:30:36
+lastsearch = 2024-08-08 01:16:27
 
 [tiki.vn]
 match = -138.9%%
@@ -18,8 +18,8 @@ url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
 match = -188.9%%
-title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
+title = Everon EST-21036 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-EST21036.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Elegant H122 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-elegant-h122
+match = -61.1%%
+title = Bộ ga phủ Common C104 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-common-c104
 
 [aeoneshop.com]
 match = -105.6%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = 33.3%%
-title = Bộ Chăn Ga Gối Eu06
-url = https://antbedding.com/bo-chan-ga-goi-eu06
+match = -33.3%%
+title = Bộ Chăn Ga Gối Modal Cotton MC13
+url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
 
 [www.mym.com.vn]
 match = -57.1%%
