--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-07 22:37:55
+lastsearch = 2024-08-08 01:28:41
 
 [demxanh.com]
-match = 26.3%%
-title = Chăn lông 5kg mã 02
-url = https://demxanh.com/chan-long-5kg-ma-02.html
+match = -60.9%%
+title = Chăn lông cừu là gì? Nên chọn loại chăn lông cừu nào?
+url = https://demxanh.com/chan-long-cuu-la-gi-nen-chon-loai-chan-long-cuu-nao.html
 
 [shopee.vn]
 match = 43.5%%
