--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-08-07 22:45:08
+lastsearch = 2024-08-08 01:21:59
 
 [www.everonvn.vn]
-match = 7.4%%
-title = ĐỆM LÒ XO EVERON, KING KOIL
-url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
+match = 31.1%%
+title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [everonkorea.com]
 match = 23.4%%
@@ -38,8 +38,8 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.h
 
 [www.everonqb.com]
 match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
+title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everonvn.com.vn]
 match = 42.6%%
@@ -69,5 +69,5 @@ url = https://thegioinemshop.com/1696659444.html
 [everon.com.vn]
 match = 21.3%%
 title = ĐỆM LÒ XO KINGKOIL CLOUD FIRM | Khuyến Mại 77 Xã ...
-url = https://everon.com.vn/dem-lo-xo-kingkoil-cloud-firm/?srsltid=AfmBOop39kOIZ3a_tDu0NG6-eGnsUv2a0zGlC2ZI4Jpuggc_AUGJmgUW
+url = https://everon.com.vn/dem-lo-xo-kingkoil-cloud-firm/
 
