--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-08-07 22:53:52
+lastsearch = 2024-08-08 01:19:10
 
 [shope.io.vn]
 match = -59.3%%
@@ -12,9 +12,9 @@ title = Ruột gối đầu họa tiết kẻ VANDA bông gòn cao cấp màu HO
 url = https://shope.io.vn/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-hot-cap-nhat-lien-tuc-ma-sc55-8
 
 [www.diepxuan.com]
-match = 3.7%%
-title = Ruột gối kê Everon 45x65 Thin - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thin.html
+match = -18.5%%
+title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
 
 [giasale.com]
 match = -59.3%%
