CI images update

--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-08-07 20:04:39
+lastsearch = 2024-08-08 01:47:33
 
 [shopee.vn]
 match = -90.9%%
@@ -24,7 +24,7 @@ url = https://m.facebook.com/61553157173242/
 [www.lazada.vn]
 match = -9.1%%
 title = Chiếu Nhựa 2mx 3m Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/?page=3&srsltid=AfmBOoobpk7kaTrpcAmGj0w7TGjj8sLL5P8XSy8lHavod7UVKI2AKqu0
+url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/?page=3
 
 [tiki.vn]
 match = -86.4%%
