--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-07 21:13:30
+lastsearch = 2024-08-08 01:37:17
 
 [hk.linkedin.com]
-match = -123.1%%
-title = Chan cocoo - Freelance (Self employed)
-url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
+match = -53.8%%
+title = Coco Chan - DFI Retail Group
+url = https://hk.linkedin.com/in/coco-chan-044763ba
 
 [www.instagram.com]
 match = -38.5%%
