--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-07 18:14:27
+lastsearch = 2024-08-08 01:46:11
 
 [shopee.vn]
 match = -152.6%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -147.4%%
-title = 20 Bài Hát Thiếu Nhi Bé Thích Nghe Nhất 🍎 QUẢ GÌ - ĐOÀN ...
-url = https://www.youtube.com/watch?v=GJeA-eIvjkc
+match = -142.1%%
+title = Em được khen là em bé ngoan - Nhạc Thiếu Nhi Sôi Động ...
+url = https://www.youtube.com/watch?v=8rqhq1qD90w
 
 [dochoihoangthu.com]
 match = -121.1%%
