--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-07 21:55:39
+lastsearch = 2024-08-08 01:41:22
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -17,9 +17,9 @@ title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
 url = https://shopee.vn/GA-CHỐNG-THẤM-CAO-CẤP-2m-x-2m2-i.236450460.21023762253
 
 [www.lazada.vn]
-match = -78.9%%
-title = [ giá hủy diệt ] GA CHỐNG THẤM COTTONG 2M-2M2 ...
-url = https://www.lazada.vn/products/gia-huy-diet-ga-chong-tham-cottong-2m-2m2-hang-chat-luong-an-toan-danh-cho-be-cam-ket-100-hang-chuan-size-1m63-nguoi-1m84-nguoi-i841376767.html
+match = -136.8%%
+title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
+url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html?srsltid=AfmBOop5Wij95Nqqj9OaNhHQdgeA0xGExluGO5uSc5vBlfb8DEcBSIdf
 
 [demgiare.net]
 match = 5.3%%
@@ -47,9 +47,9 @@ title = Ga giường chống thấm nước hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ga giường chống thấm nước
 
 [goodmamastore.com]
-match = -63.2%%
-title = Ga Chống Thấm Goodmama - Họa tiết Lá Đại
-url = https://goodmamastore.com/products/ga-chống-thấm-goodmama-hinh-hoa-day-xanh
+match = -94.7%%
+title = Ga chống thấm Goodmama - Mẫu Thỏ hồng dễ thương
+url = https://goodmamastore.com/products/ga-chống-thấm-bọc-dệm-cotton-bọc-dệm-cao-cấp-goodmama-cun-hồng
 
 [www.facebook.com]
 match = -121.1%%
@@ -69,7 +69,7 @@ url = https://pubs.acs.org/doi/10.1021/acs.inorgchem.3c00311
 [ketsatdaiphu.vn]
 match = -94.7%%
 title = Bộ Ga Gối Và Vỏ Chăn Nỉ Lông Nhung( Tặng Kèm 01 ...
-url = https://ketsatdaiphu.vn/san-pham/bo-ga-goi-va-vo-chan-ni-long-nhung-tang-kem-01-chiec-goi-trai-tim/
+url = https://ketsatdaiphu.vn/san-pham/bo-ga-goi-va-vo-chan-ni-long-nhung-tang-kem-01-chiec-goi-trai-tim/?srsltid=AfmBOopQJ7ALKpD-vdgBZJwnw3R-CaJY7bvBumBobrqzG-G_3JmGetMr
 
 [www.tiktok.com]
 match = -210.5%%
@@ -250,4 +250,9 @@ url = https://www.scirp.org/journal/paperinformation?paperid=51047
 match = -115.8%%
 title = Sono Bisque Doll wa Koi wo Suru - Chapter 105 ...
 url = https://www.reddit.com/r/SonoBisqueDoll/comments/1dvdpr5/sono_bisque_doll_wa_koi_wo_suru_chapter_105/
+
+[congtynem.com]
+match = -115.8%%
+title = Top 8+ Bộ Drap ( Ga Nệm 2M X 2M2 Đẹp Nhất Hiện Nay ...
+url = https://congtynem.com/ga-nem-2m-x-2m2/
 
