--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-07 22:29:01
+lastsearch = 2024-08-08 01:48:13
 
 [quizlet.com]
 match = -170.0%%
@@ -47,9 +47,9 @@ title = Loom + Forge Ren 16-pc. Stoneware Dinnerware Set
 url = https://www.jcpenney.com/p/loom-forge-ren-16-pc-stoneware-dinnerware-set/ppr5008057935?pTmplType=regular
 
 [en.wikipedia.org]
-match = -120.0%%
-title = List of acupuncture points
-url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Ren_(philosophy)
 
 [books.google.com]
 match = -430.0%%
