--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-07 20:02:15
+lastsearch = 2024-08-08 01:35:52
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -63,8 +63,8 @@ url = https://khonemtonghop.com/nem-bong-ep-gap-3-padding-everon/
 
 [thegioinem.com]
 match = 0.0%%
-title = Chăn Ga Gối Everon EPM22063
-url = https://thegioinem.com/chan-ga-goi-everon-epm22063.html
+title = Chăn Ga Everon EST24035
+url = https://thegioinem.com/chan-ga-everon-est24035.html
 
 [tongdailyeveron.com.vn]
 match = 0.0%%
