--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-08-07 23:59:04
+lastsearch = 2024-08-08 01:44:28
 
 [everonvn.com.vn]
 match = -12.5%%
 title = Tấm trải chần Everon chất liệu 100%% cotton
-url = https://everonvn.com.vn/everon/2166/tam-trai-everon?srsltid=AfmBOoqu5IkR0qZVZP58OtSJ07gNeEmOKR0Aa_GLL-Ejdz9KHXdMoTXR
+url = https://everonvn.com.vn/everon/2166/tam-trai-everon
 
 [everonthaiha.com]
 match = 35.3%%
@@ -29,7 +29,7 @@ url = https://everon.online/collections/topper-tam-tang-tien-nghi
 [www.lazada.vn]
 match = -66.7%%
 title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tam-trai-everon/?srsltid=AfmBOoraZ9HZ0RphqZXfQ8hW4mYSqdQLl_wvEZpShoFGPuaAVblkJXe9
+url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [www.everonvn.vn]
 match = -20.8%%
