CI images update

--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-07 22:39:18
+lastsearch = 2024-08-08 02:18:07
 
 [demxanh.com]
 match = 33.3%%
 title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html?srsltid=AfmBOoook7IltMzZXrsy4irKUTdMa6O77lyZ3kDD2hth-ModSA4DbZwO
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [suongtuyet.com]
 match = 16.7%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/?srsltid=AfmBOorvKGLNoQ1LeppBO-jVQvF5vfrnOHOD28uVpY4iyVijLdQMVp33
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
 
 [www.dienmayxanh.com]
 match = -36.7%%
@@ -69,7 +69,7 @@ url = https://thegioinem.com/chieu-dieu-hoa-3d-tencel.html
 [xn--nekiovitnam-y69e.vn]
 match = 3.3%%
 title = Bảng giá chiếu mây điều hòa 2024 - Nekio Việt Nam
-url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/?srsltid=AfmBOorUh42Hs-GFKkzB4IdYhPP_vlhDdyYIP8itPsknN9jflcZ_f3CW
+url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/
 
 [chiaki.vn]
 match = 6.7%%
