--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-07 21:35:30
+lastsearch = 2024-08-08 02:17:45
 
 [shopee.vn]
-match = -8.3%%
-title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
+match = -58.3%%
+title = Thảm lau chân - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm lau chân
 
 [lepetit.com.vn]
 match = -66.7%%
-title = Thảm lau chân lông xù hình học thấm nước, chống trượt ...
-url = https://lepetit.com.vn/tham-long-xu-chu-nha-t-ke-hi-nh-tha-m-nuo-c-cho-ng-truo-t-40x60-cm
+title = Thảm lau chân lông xù màu trơn thấm nước, chống trượt ...
+url = https://lepetit.com.vn/tham-long-xu-chu-nhat-ma-u-tron-tham-nuoc-chong-truot-40x60-cm
 
 [tiki.vn]
 match = -54.2%%
@@ -39,7 +39,7 @@ url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 [www.lottemart.vn]
 match = -45.8%%
 title = Thảm Len Hình Thú 40x60 cm (Giao Màu Ngẫu Nhiên)
-url = https://www.lottemart.vn/vi-nsg/product/animal-patterned-wool-rug-40x60cm-random-color-delivery-8936186271359-p46359?srsltid=AfmBOopEu-u-XQQog0rX1BJPxaClTI1BtsgIJa-PUPtjMf3GyX_EeryM
+url = https://www.lottemart.vn/vi-vih/product/tham-len-hinh-thu-40x60-cm-8936186271359-p46359
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 [www.lazada.vn]
 match = -83.3%%
 title = Thảm lau chùi chân chống trơn trượt sợi len siêu mịn kích ...
-url = https://www.lazada.vn/products/tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1603764008.html?srsltid=AfmBOoqVDpmubsnUT1jlG02z_pm7UVptFhMDd--raJ_MSJ4_ltZk_Rjf
+url = https://www.lazada.vn/products/tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1603764008.html
 
 [megahomevietnam.com]
 match = 20.0%%
