--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-07 23:58:19
+lastsearch = 2024-08-08 02:10:47
 
 [www.diepxuan.com]
-match = 17.9%%
-title = Điệp Xuân Ga chun EPCARLESS 180x200
-url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html
+match = 3.6%%
+title = Điệp Xuân Ga chun chần ES1707 160x200
+url = https://www.diepxuan.com/ga-chun-chan-es1707-160x200.html
 
 [www.qcyc.ca]
 match = -53.6%%
