--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-08-07 23:58:40
+lastsearch = 2024-08-08 02:18:48
 
 [www.youtube.com]
 match = -420.0%%
@@ -37,9 +37,9 @@ title = Ren (@Renmakesmusic) / X
 url = https://twitter.com/renmakesmusic
 
 [www.facebook.com]
-match = -370.0%%
-title = AcuPro Academy - Ren 14 (CV 14) located 6 cun above ...
-url = https://www.facebook.com/photo.php?fbid=1547299565411654&id=393176087490680&set=a.395996077208681
+match = -450.0%%
+title = Tallest Teenager - Guinness World Records Day | New record ...
+url = https://www.facebook.com/GuinnessWorldRecords/videos/tallest-teenager-guinness-world-records-day/657433078277882/
 
 [books.google.com]
 match = -460.0%%
@@ -122,9 +122,9 @@ title =
 url = https://vndb.org/v36279
 
 [cutiesai.itch.io]
-match = -240.0%%
-title = 14 Days With You by cutiesai - Itch.io
-url = https://cutiesai.itch.io/14dayswithyou
+match = 0.0%%
+title = 
+url = https://cutiesai.itch.io/14dayswithyou/purchase
 
 [www.koha.net]
 match = 0.0%%
