--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-07 23:37:32
+lastsearch = 2024-08-08 02:12:52
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+match = 40.9%%
+title = Thảm giường nỉ 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 02
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-02.html
 
 [www.lazada.vn]
-match = -31.8%%
-title = Thảm Trải Giường Ngủ Giá Tốt T08/2024 - Lazada
-url = https://www.lazada.vn/tag/tham-trai-giuong-ngu/
+match = -113.6%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [www.sendo.vn]
 match = 4.5%%
@@ -69,7 +69,7 @@ url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuo
 [jysk.vn]
 match = -63.6%%
 title = Bed frame HASLEV 160x200 dark grey - JYSK.vn
-url = https://jysk.vn/en-US/bed-frame-haslev-160x200-dark-grey?srsltid=AfmBOoq_ZxYN8QDRgCIIi42w5e_P0iWtzE4elLxL0Y8xwnUdZ3P1WFfn
+url = https://jysk.vn/en-US/bed-frame-haslev-160x200-dark-grey
 
 [blanc.vn]
 match = 13.6%%
@@ -127,9 +127,9 @@ title = Pin by Alesha Faicco on Desks - bedroom
 url = https://www.pinterest.com/pin/pin-von-alesha-faicco-auf-desks-bedroom--565483296932165432/
 
 [tonybed.com]
-match = -36.4%%
-title = Bộ Drap Ga Trải Giường Tencel Màu – TCM46
-url = https://tonybed.com/bo-drap-ga-trai-giuong-tencel-mau-tcm46/
+match = -4.5%%
+title = Bộ Drap Ga Trải Giường Modal - 21
+url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
 
 [dongagroup.vn]
 match = -100.0%%
