CI images update

--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-08-07 22:54:58
+lastsearch = 2024-08-08 02:35:00
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -87,9 +87,9 @@ title = Bệnh nấm móng (Onychomycosis) - Viện Sốt rét
 url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-nam-mong-onychomycosis.html
 
 [baomoi.com]
-match = -64.3%%
-title = Bí ẩn mỹ nhân thể thao đẹp nhất lịch sử Hồng Kông thất ...
-url = https://baomoi.com/bi-an-my-nhan-the-thao-dep-nhat-lich-su-hong-kong-that-nghiep-van-du-da-16-nam-o-vancouver-c39122033.epi
+match = -17.9%%
+title = Việt - Tin tức online 24h mới nhất hôm nay
+url = https://baomoi.com/tag/Việt.epi
 
 [nimpe.vn]
 match = -50.0%%
