--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-07 23:57:37
+lastsearch = 2024-08-08 02:40:06
 
 [demxanh.com]
 match = 34.5%%
@@ -12,14 +12,14 @@ title = Chiếu điều hòa cao su non Tencel xanh nhạt
 url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
-match = -13.8%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+match = 3.4%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [thegioichieutruc.com]
-match = 51.7%%
-title = Chiếu điều hòa cao su non Tencel ghi
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-ghi/
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel cam đất chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat/
 
 [demchinhhang.com]
 match = -20.7%%
@@ -65,4 +65,14 @@ url = https://suongtuyet.com/chieu-dieu-hoa-cao-su-non-001
 match = -13.8%%
 title = Chiếu điều hòa cao su non loại tốt - Mẫu 6 - Nệm Uy Tín
 url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-6/
+
+[www.nemuytin.com]
+match = -10.3%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
+url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
+
+[sieuthidem.vn]
+match = -26.3%%
+title = Đệm - SIEUTHIDEM.VN
+url = https://sieuthidem.vn/product-category/dem/
 
