--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-08 01:16:27
+lastsearch = 2024-08-08 02:28:43
 
 [tiki.vn]
 match = -138.9%%
@@ -32,9 +32,9 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -105.6%%
-title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
-url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
+match = -150.0%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 705 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-705-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -72.2%%
@@ -137,9 +137,9 @@ title = FITIN
 url = https://www.facebook.com/fitin.vn/
 
 [www.diepxuan.com]
-match = 27.8%%
-title = Bộ phủ màu 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-phu-mau-180x200.html
+match = -38.9%%
+title = Bộ ga phủ WarmDream 160x200 HQ - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html
 
 [dovihome.vn]
 match = 0.0%%
