--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-07 22:38:16
+lastsearch = 2024-08-08 02:30:06
 
 [scholar.google.com]
 match = -43.8%%
@@ -72,9 +72,9 @@ title = Cây lác (cây cói): Ý nghĩa, hình ảnh, cách trồng, chăm sóc
 url = https://baodaknong.vn/cay-lac-cay-coi-y-nghia-hinh-anh-cach-trong-cham-soc-tai-nha-171408.html
 
 [baomoi.com]
-match = -200.0%%
-title = Khởi tố 18 bị can trong vụ đánh bạc liên quan cựu Phó ...
-url = https://baomoi.com/khoi-to-18-bi-can-trong-vu-danh-bac-lien-quan-cuu-pho-chu-tich-ubnd-tinh-phu-tho-c49842910.epi
+match = -212.5%%
+title = Bí mật về con đường dài nhất thế giới: Chạy qua 14 quốc ...
+url = https://baomoi.com/bi-mat-ve-con-duong-dai-nhat-the-gioi-chay-qua-14-quoc-gia-gap-18-lan-chieu-dai-viet-nam-c49843517.epi
 
 [ivymoda.com]
 match = -193.8%%
