--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-07 21:00:06
+lastsearch = 2024-08-08 02:25:14
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -17,9 +17,9 @@ title = Everon Quảng Bình Ga phủ EPC19056 160x200
 url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
-match = 14.3%%
-title = Ga phủ ESM20013 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
+match = -19.0%%
+title = Chiếu cây HT 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [muathongminh.vn]
 match = -142.9%%
