--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-08 00:27:53
+lastsearch = 2024-08-08 02:35:42
 
 [www.gov.uk]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Movie Information | Tickets | Showtimes |
 url = https://readingcinemas.com/
 
 [www.youtube.com]
-match = -233.3%%
-title = Tony Robbins: STOP Wasting Your LIFE! (Change Everything ...
-url = https://www.youtube.com/watch?v=O9F19ban7A4
+match = -180.0%%
+title = Annie Murphy Paul: What we learn before we're born
+url = https://www.youtube.com/watch?v=stngBN4hp14
 
 [vietjack.com]
 match = -106.7%%
@@ -1205,4 +1205,24 @@ url = https://www.kare11.com/
 match = -260.0%%
 title = Chicago Park District | The Official Website of the Chicago ...
 url = https://www.chicagoparkdistrict.com/
+
+[www.mypanhandle.com]
+match = -153.3%%
+title = Panama City News & Weather | Panama City, FL ...
+url = https://www.mypanhandle.com/
+
+[www.usa.gov]
+match = 0.0%%
+title = 
+url = https://www.usa.gov/immigration-case-status
+
+[www.ferrum.edu]
+match = -13.3%%
+title = Ferrum College: Home
+url = https://www.ferrum.edu/
+
+[www.ecu.org]
+match = 13.3%%
+title = Eastman Credit Union
+url = https://www.ecu.org/
 
