--- a/images/nem-everon-150x190x9/config.ini
+++ b/images/nem-everon-150x190x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-150x190x9.html
 lastopen = 2024-06-06 17:10:22
 
 [search]
-lastsearch = 2024-08-07 17:53:22
+lastsearch = 2024-08-08 02:35:21
 
 [everonvn.com.vn]
 match = 15.0%%
@@ -12,9 +12,9 @@ title = Bảng Giá Đệm Everon Năm 2024
 url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [akasi.com.vn]
-match = -45.0%%
-title = Đệm bông ép Hàn Quốc - KORE - Akasi
-url = https://akasi.com.vn/san-pham/dem-bong-ep-han-quoc-kore/
+match = 10.0%%
+title = ĐỆM BÔNG ÉP EVERON - Akasi
+url = https://akasi.com.vn/san-pham/dem-bong-ep-everon/
 
 [everon365.vn]
 match = 16.7%%
@@ -54,7 +54,7 @@ url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 [thegioidemonline.com]
 match = -40.0%%
 title = Bảng giá nệm Sông Hồng mới nhất 2022
-url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html?srsltid=AfmBOoqglaubvxbZChooqudedRplG3HudC_TXhZbQtQ_yULRuBPVsX4p
+url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html
 
 [www.diepxuan.com]
 match = 0.0%%
