--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-08 00:44:06
+lastsearch = 2024-08-08 02:40:49
 
 [www.reddit.com]
 match = -82.6%%
@@ -590,4 +590,19 @@ url = https://tmd.texas.gov/ribbon-builder
 match = -43.5%%
 title = CNN: Breaking News, Latest News and Videos
 url = https://edition.cnn.com/
+
+[www.nasdaq.com]
+match = -43.5%%
+title = Stocks Slump on US Economic Growth Risks
+url = https://www.nasdaq.com/articles/stocks-slump-us-economic-growth-risks
+
+[journals.sagepub.com]
+match = -121.7%%
+title = Uneven and combined state capitalism - Ilias Alami, Adam ...
+url = https://journals.sagepub.com/doi/10.1177/0308518X211037688
+
+[www.history.navy.mil]
+match = -78.3%%
+title = <p>Southeast Asia, Building the Navy's Bases</p>
+url = https://www.history.navy.mil/content/dam/museums/Seabee/Online Reading Room/Manuals and Publications/Publications/Southeast Asia, Building The Bases, A History Of Const.pdf
 
