--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-08-07 20:05:42
+lastsearch = 2024-08-08 02:26:58
 
 [tuananh.vn]
 match = 12.0%%
@@ -14,7 +14,7 @@ url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
 [demxanh.com]
 match = -28.0%%
 title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOortrO1lOYMKwWTbxCYkenPdpwoIMIvTIsO4RJIo4xUwhe9lxVhV
 
 [demkhangduy.com]
 match = 25.0%%
@@ -34,7 +34,7 @@ url = https://shopee.vn/Đệm-lò-xo-túi-kore-Tuấn-Anh-_180x200x24cm_hành-c
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOoo5dUZUcUZfssRhtBrzVHHjuxawC9nmiDJMw30Z6Sc1LgOqVCKp
 
 [entershopping.vn]
 match = -36.0%%
