--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-07 23:19:48
+lastsearch = 2024-08-08 02:36:43
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -87,9 +87,9 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -145.0%%
-title = Kurt Stenmark, MD Professor, Pediatrics-Critical Care ...
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/15570
+match = -85.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [www.dir.ca.gov]
 match = -28.6%%
