--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-07 22:44:10
+lastsearch = 2024-08-08 02:49:58
 
 [everon.online]
 match = 15.4%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/@cuongkhii/video/7250838547173870853
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiWQFnJ-D&sig=ACfU3U1iEd5KrRy30MH4MZii9fWHPxi_LQ&hl=en&sa=X&ved=2ahUKEwjDgLa0_eGHAxXnEVkFHUqMOKcQ6AF6BAgZEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiWQLlD4G&sig=ACfU3U1jIQPqPxrEZNJRkABWsU52URlz_A&hl=en&sa=X&ved=2ahUKEwiOnLO40-OHAxWQDzQIHYgxBC0Q6AF6BAgaEAM
 
 [everonchinhhang.vn]
 match = -26.9%%
@@ -425,4 +425,9 @@ url = https://nongnghiep.vn/tri-thuc-nong-dan/cap-nhat-moi-nhat-quy-dinh-ve-nhap
 match = 15.8%%
 title = Chăn bốn mùa - ELAN
 url = https://elan.vn/collections/chan-bon-mua
+
+[wtafiles.wtatennis.com]
+match = 3.8%%
+title = Career Prize Money Leaders
+url = https://wtafiles.wtatennis.com/pdf/rankings/All_Career_Prize_Money.pdf.
 
