--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-08 02:15:21
+lastsearch = 2024-08-08 03:00:57
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -164,7 +164,7 @@ url = https://stockbiz.vn/tin-tuc/ha-noi-huong-toi-xuat-khau-thuy-san/26441575
 [metric.vn]
 match = -48.1%%
 title = Báo cáo thị trường Chăn lông tuyết 5kg dành cho doanh ...
-url = https://metric.vn/chan-long-tuyet-5kg?srsltid=AfmBOoqx7y0pTdymYaISHvWSeOSIPG38sKSg4JdVnIGJ5JtH3yhsZiao
+url = https://metric.vn/chan-long-tuyet-5kg
 
 [ts.udn.vn]
 match = -10.0%%
