--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-07 23:56:52
+lastsearch = 2024-08-08 02:59:08
 
 [shopee.vn]
 match = -28.0%%
@@ -27,9 +27,9 @@ title = Xin chào, tôi ở Đài Loan | Kaohsiung
 url = https://www.facebook.com/toiodailoan/
 
 [vi.wikipedia.org]
-match = -4.0%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 12.5%%
+title = Lịch sử Đài Loan
+url = https://vi.wikipedia.org/wiki/Lịch_sử_Đài_Loan
 
 [www.voatiengviet.com]
 match = -72.0%%
