--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-08 00:34:28
+lastsearch = 2024-08-08 02:53:10
 
 [vinatools.com]
 match = -140.0%%
 title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
-url = https://vinatools.com/keo-cat-ton-d-216-116/?srsltid=AfmBOorqSFLfcGaCB-ByYjjfflgszPe6aM9PWIqLH0f1dBQlhNt-T83d
+url = https://vinatools.com/keo-cat-ton-d-216-116/?srsltid=AfmBOopNEbkKozoY_aSEt1Suu2jC19o8oMIWaS8bMMEdLw2kJ03VVnoc
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -182,9 +182,9 @@ title = [NGẪU NHIÊN] Dụng cụ nhảy dây có đếm số vòng D216
 url = https://www.lazada.vn/products/ngau-nhien-dung-cu-nhay-day-co-dem-so-vong-d216-rikob-shop-i2433883429.html
 
 [shopee.vn]
-match = -240.0%%
-title = Đầu lắc xi lanh FJ - Khớp nối đầu lắc các cỡ M5,6,8,10,12, ...
-url = https://shopee.vn/Đầu-lắc-xi-lanh-FJ-Khớp-nối-đầu-lắc-các-cỡ-M5-6-8-10-12-14-16-18-20-27-(chính-hãng-SNS)-i.1096166656.24605536524
+match = -226.7%%
+title = Que hàn sắt KOBE-16 D2.6 - 3.2 - 4.0 - 5.0 ( Thái Lan )
+url = https://shopee.vn/product/686340132/24951807725
 
 [www.ministop.vn]
 match = -26.7%%
