--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-07 23:52:43
+lastsearch = 2024-08-08 02:59:53
 
 [www.tiktok.com]
 match = -235.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ7wsIC71&sig=ACfU3U0vJZ7Gl2EltPqfDnZuX1jdiTRvqQ&hl=en&sa=X&ved=2ahUKEwjitMrpq-OHAxWgkYkEHcItItgQ6AF6BAg9EAM
+match = -211.8%%
+title = Supplement op het algemeen aardrijkskundig woordenboek: door ...
+url = https://books.google.com/books?id=fvuWQ1D6QdYC&pg=PA458&lpg=PA458&dq=man+in+hoa+dep+16&source=bl&ots=IEPDE9SGv5&sig=ACfU3U1f1safAdQj_-zWLR-gVZLIOtm2xw&hl=en&sa=X&ved=2ahUKEwjwzaLU1eOHAxXmDzQIHR_nLycQ6AF6BAg0EAM
 
 [tax.vermont.gov]
 match = -29.4%%
