--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-07 23:42:09
+lastsearch = 2024-08-08 02:52:05
 
 [tuananh.vn]
 match = -72.7%%
@@ -12,9 +12,9 @@ title = Đệm bông ép
 url = https://tuananh.vn/dem-bong-ep-c51.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+match = -28.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [shopee.vn]
 match = -40.0%%
@@ -32,9 +32,9 @@ title = Đệm bông ép Tuấn Anh Korea gấm Plus - chăn ga gối
 url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [sieuthidemonline.vn]
-match = -24.0%%
-title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
-url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
+match = -60.0%%
+title = Đệm Tuấn Anh - thương hiệu đệm hàng đầu tại Việt Nam!
+url = https://sieuthidemonline.vn/dem-tuan-anh/
 
 [suongtuyet.com]
 match = 16.0%%
